tests/snapshots/execution_spec__add-field-with-composition.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Address {
  geo: Geo
  street: String
}

scalar Date

scalar Email

type Geo {
  lat: String
  lng: String
}

scalar JSON

scalar PhoneNumber

type Query {
  lat: String
  lng: String
  user: User
}

scalar Url

type User {
  address: Address
}

schema {
  query: Query
}
