tests/snapshots/execution_spec__add-field-with-modify.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  person1: User
  person2: User
  user1: String
  user2: String
}

scalar Url

type User {
  name: String
}

schema {
  query: Query
}
