tests/snapshots/execution_spec__add-field-with-modify.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema {
  query: Query
}

type Query @addField(name: "user1", path: ["person1", "name"]) @addField(name: "user2", path: ["person2", "name"]) {
  person1: User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users/1")
  person2: User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users/2")
}

type User {
  name: String
}
