tests/snapshots/execution_spec__add-field.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Address {
  geo: Geo
}

scalar Date

scalar Email

scalar Empty

type Geo {
  lat: String
}

scalar JSON

scalar PhoneNumber

type Query {
  user: User
}

scalar Url

type User {
  address: Address
  lat: String
}

schema {
  query: Query
}
