tests/snapshots/execution_spec__add-field.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema {
  query: Query
}

type Address {
  geo: Geo
}

type Geo {
  lat: String
}

type Query {
  user: User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users/1")
}

type User @addField(name: "lat", path: ["address", "geo", "lat"]) {
  address: Address
}
