tests/snapshots/execution_spec__add-field.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "lat": "-37.3159"
      }
    }
  }
}
